src/main/metadata/objects/Survey_Result_2012__c.object
<CustomObject>
    <description>SSI: To store 2012 SSI survey result</description>
    <fields>
        <fullName>A14_Code__c</fullName>
        <label>A14 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>A14_Comment__c</fullName>
        <label>A14 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>A14_Question__c</fullName>
        <label>A14 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>A14__c</fullName>
        <label>A14</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Results 2012</relationshipLabel>
        <relationshipName>Survey_Results_2012</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAC_SourceId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>CAC SourceId</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <label>CompanyName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DealerName__c</fullName>
        <label>DealerName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <label>Dealer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_call_time__c</fullName>
        <label>End call time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Eventually_contact_phone__c</fullName>
        <label>Eventually contact phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Code__c</fullName>
        <label>H1 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H1_Comment__c</fullName>
        <label>H1 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>H1_Question__c</fullName>
        <label>H1 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>H1__c</fullName>
        <label>H1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H3_Code__c</fullName>
        <label>H3 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H3_Comment__c</fullName>
        <label>H3 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>H3_Question__c</fullName>
        <label>H3 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>H3__c</fullName>
        <label>H3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H4_Code__c</fullName>
        <label>H4 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H4_Comment__c</fullName>
        <label>H4 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>H4_Question__c</fullName>
        <label>H4 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>H4__c</fullName>
        <label>H4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Month__c</fullName>
        <label>Invoice Month</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>K1_Code__c</fullName>
        <label>K1 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>K1_Comment__c</fullName>
        <label>K1 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>K1_Question__c</fullName>
        <label>K1 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>K1__c</fullName>
        <label>K1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>K2_Code__c</fullName>
        <label>K2 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>K2_Comment__c</fullName>
        <label>K2 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>K2_Question__c</fullName>
        <label>K2 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>K2__c</fullName>
        <label>K2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>K3_Code__c</fullName>
        <label>K3 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>K3_Comment__c</fullName>
        <label>K3 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>K3_Question__c</fullName>
        <label>K3 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>K3__c</fullName>
        <label>K3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <label>Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q001_Code__c</fullName>
        <label>Q001 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q001_Comment__c</fullName>
        <label>Q001 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q001_Question__c</fullName>
        <label>Q001 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q001__c</fullName>
        <label>Q001</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q002_Code__c</fullName>
        <label>Q002 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q002_Comment__c</fullName>
        <label>Q002 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q002_Question__c</fullName>
        <label>Q002 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q002__c</fullName>
        <label>Q002</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q003_Code__c</fullName>
        <label>Q003 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q003_Comment__c</fullName>
        <label>Q003 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q003_Question__c</fullName>
        <label>Q003 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q003__c</fullName>
        <label>Q003</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_Code__c</fullName>
        <label>S1 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1_Comment__c</fullName>
        <label>S1 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>S1_Question__c</fullName>
        <label>S1 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>S1__c</fullName>
        <label>S1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S2_Code__c</fullName>
        <label>S2 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S2_Comment__c</fullName>
        <label>S2 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>S2_Question__c</fullName>
        <label>S2 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>S2__c</fullName>
        <label>S2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3_Code__c</fullName>
        <label>S3 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3_Comment__c</fullName>
        <label>S3 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>S3_Question__c</fullName>
        <label>S3 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>S3__c</fullName>
        <label>S3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SSI_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SSI Record</label>
        <referenceTo>SSI__c</referenceTo>
        <relationshipLabel>Survey Results 2012</relationshipLabel>
        <relationshipName>Survey_Results_2012</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Second_Mobile__c</fullName>
        <label>Second Mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_call_time__c</fullName>
        <label>Start call time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tel1__c</fullName>
        <label>Tel1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tel2__c</fullName>
        <label>Tel2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <label>Vehicle Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_USvin__c</fullName>
        <label>Vehicle USvin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1B1_Code__c</fullName>
        <label>X1B1 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1B1_Comment__c</fullName>
        <label>X1B1 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1B1_Question__c</fullName>
        <label>X1B1 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1B1__c</fullName>
        <label>X1B1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1B2_Code__c</fullName>
        <label>X1B2 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1B2_Comment__c</fullName>
        <label>X1B2 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1B2_Question__c</fullName>
        <label>X1B2 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1B2__c</fullName>
        <label>X1B2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1B3_Code__c</fullName>
        <label>X1B3 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1B3_Comment__c</fullName>
        <label>X1B3 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1B3_Question__c</fullName>
        <label>X1B3 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1B3__c</fullName>
        <label>X1B3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1F1_Code__c</fullName>
        <label>X1F1 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1F1_Comment__c</fullName>
        <label>X1F1 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1F1_Question__c</fullName>
        <label>X1F1 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1F1__c</fullName>
        <label>X1F1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1F2_Code__c</fullName>
        <label>X1F2 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1F2_Comment__c</fullName>
        <label>X1F2 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1F2_Question__c</fullName>
        <label>X1F2 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1F2__c</fullName>
        <label>X1F2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1G1_Code__c</fullName>
        <label>X1G1 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1G1_Comment__c</fullName>
        <label>X1G1 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1G1_Question__c</fullName>
        <label>X1G1 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1G1__c</fullName>
        <label>X1G1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1G2_Code__c</fullName>
        <label>X1G2 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1G2_Comment__c</fullName>
        <label>X1G2 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1G2_Question__c</fullName>
        <label>X1G2 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1G2__c</fullName>
        <label>X1G2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1G3_Code__c</fullName>
        <label>X1G3 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1G3_Comment__c</fullName>
        <label>X1G3 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1G3_Question__c</fullName>
        <label>X1G3 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1G3__c</fullName>
        <label>X1G3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1K1_Code__c</fullName>
        <label>X1K1 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1K1_Comment__c</fullName>
        <label>X1K1 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1K1_Question__c</fullName>
        <label>X1K1 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1K1__c</fullName>
        <label>X1K1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1K2_Code__c</fullName>
        <label>X1K2 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1K2_Comment__c</fullName>
        <label>X1K2 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1K2_Question__c</fullName>
        <label>X1K2 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1K2__c</fullName>
        <label>X1K2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1K3_Code__c</fullName>
        <label>X1K3 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1K3_Comment__c</fullName>
        <label>X1K3 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1K3_Question__c</fullName>
        <label>X1K3 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1K3__c</fullName>
        <label>X1K3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1Q1_Code__c</fullName>
        <label>X1Q1 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1Q1_Comment__c</fullName>
        <label>X1Q1 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1Q1_Question__c</fullName>
        <label>X1Q1 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1Q1__c</fullName>
        <label>X1Q1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1Q201_Code__c</fullName>
        <label>X1Q201 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1Q201_Comment__c</fullName>
        <label>X1Q201 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1Q201_Question__c</fullName>
        <label>X1Q201 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1Q201__c</fullName>
        <label>X1Q201</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1Q202_Code__c</fullName>
        <label>X1Q202 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1Q202_Comment__c</fullName>
        <label>X1Q202 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1Q202_Question__c</fullName>
        <label>X1Q202 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1Q202__c</fullName>
        <label>X1Q202</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1S1_Code__c</fullName>
        <label>X1S1 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1S1_Comment__c</fullName>
        <label>X1S1 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1S1_Question__c</fullName>
        <label>X1S1 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1S1__c</fullName>
        <label>X1S1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1S2_Code__c</fullName>
        <label>X1S2 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1S2_Comment__c</fullName>
        <label>X1S2 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1S2_Question__c</fullName>
        <label>X1S2 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1S2__c</fullName>
        <label>X1S2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1S3_Code__c</fullName>
        <label>X1S3 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1S3_Comment__c</fullName>
        <label>X1S3 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1S3_Question__c</fullName>
        <label>X1S3 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1S3__c</fullName>
        <label>X1S3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1Z1_Code__c</fullName>
        <label>X1Z1 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1Z1_Comment__c</fullName>
        <label>X1Z1 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1Z1_Question__c</fullName>
        <label>X1Z1 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1Z1__c</fullName>
        <label>X1Z1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1Z2_Code__c</fullName>
        <label>X1Z2 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1Z2_Comment__c</fullName>
        <label>X1Z2 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1Z2_Question__c</fullName>
        <label>X1Z2 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1Z2__c</fullName>
        <label>X1Z2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z1_Code__c</fullName>
        <label>Z1 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z1_Comment__c</fullName>
        <label>Z1 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Z1_Question__c</fullName>
        <label>Z1 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Z1__c</fullName>
        <label>Z1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z2_Code__c</fullName>
        <label>Z2 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z2_Comment__c</fullName>
        <label>Z2 Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Z2_Question__c</fullName>
        <label>Z2 Question</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Z2__c</fullName>
        <label>Z2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Survey Result 2012</label>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Results 2012</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>